--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4-turbo-preview
+OPENAI_MODEL=gpt-4o
 OPENAI_TEMPERATURE=0.2
 
 # Application Configuration
