feat: add real-time preprocessing progress visualization
- Implement streaming logger for detailed preprocessing updates
- Add page-by-page vision processing status display
- Show file progress with timing and content metrics
- Replace processing... with granular step-by-step progress
- Display PDF conversion, page extraction, and content generation status
- Add color-coded UI indicators for different preprocessing stages

Transforms user experience from black box processing to transparent real-time progress tracking.

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,7 @@ RATE_LIMIT_WINDOW=60
 # Agent Configuration
 MAX_ITERATIONS=10
 MAX_EXECUTION_TIME=300
-CONFIDENCE_THRESHOLD=0.7 
+CONFIDENCE_THRESHOLD=0.7
+
+# Logging Configuration
+LOG_LEVEL=INFO 
